--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -43,6 +43,7 @@ body {
 
 .custom-markdown {
     font-size: 16px;
+    color: #333333;
     margin-bottom: 20px;
     margin-top: 20px;  /* Added top margin for spacing */
     font-family: 'Inter', sans-serif;
@@ -105,4 +106,9 @@ body {
     color: #ac2707;
     border: 1px solid #ac2707;
     font-weight: bold;
+}
+
+/* New rule to set the color of h4 headings to #333333 */
+h4 {
+    color: #333333;
 }
